@@ -167,6 +167,18 @@
  #endif
 #endif
 
+#ifdef _WIN32           /* WIN32 native */
+#  define NATIVE_WIN32          1
+#  ifdef __MINGW32__    /* GCC MINGW32 depends on configure */
+#    include "../../sdccconf.h"
+#  else
+#    include "../../sdcc_vc.h"
+#    define PATH_MAX    _MAX_PATH
+#  endif
+#else                   /* Assume *nix style system */
+#  include "../../sdccconf.h"
+#endif
+
 #define LKOBJEXT        "rel"
 
 /*
